--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 #
 numpy==1.16.4             # via pandas
 pandas==0.24.2
+pyfastx==0.2.2
 python-dateutil==2.8.0    # via pandas
 pytz==2019.1              # via pandas
 pyvcf==0.6.8
