support hg38 (chrM:1-16569); read MT contig from BAM header

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 numpy==1.16.4             # via pandas
 pandas==0.24.2
 pyfastx==0.2.2
+pysam==0.15.3
 python-dateutil==2.8.0    # via pandas
 pytz==2019.1              # via pandas
 pyvcf==0.6.8
@@ -14,4 +15,4 @@ six==1.12.0               # via python-dateutil
 xlsxwriter==1.1.8
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.0.1        # via pyvcf
+# setuptools==41.1.0        # via pyvcf
