--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@
 #
 #    pip-compile
 #
-numpy==1.16.4             # via pandas
+numpy==1.16.4             # via pandas, scipy
 pandas==0.24.2
 pyfastx==0.2.2
 pysam==0.15.3
 python-dateutil==2.8.0    # via pandas
 pytz==2019.1              # via pandas
 pyvcf==0.6.8
+scipy==1.3.2
 six==1.12.0               # via python-dateutil
 xlsxwriter==1.1.8
 
