--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,28 @@
 #
 #    pip-compile
 #
-numpy==1.16.4             # via pandas, scipy
+numpy==1.16.4
+    # via
+    #   pandas
+    #   scipy
 pandas==0.24.2
+    # via mitywgs (setup.py)
 pyfastx==0.2.2
+    # via mitywgs (setup.py)
 pysam==0.15.3
-python-dateutil==2.8.0    # via pandas
-pytz==2019.1              # via pandas
+    # via mitywgs (setup.py)
+python-dateutil==2.8.0
+    # via pandas
+pytz==2019.1
+    # via pandas
 pyvcf==0.6.8
+    # via mitywgs (setup.py)
 scipy==1.3.2
-six==1.12.0               # via python-dateutil
+    # via mitywgs (setup.py)
+six==1.12.0
+    # via python-dateutil
 xlsxwriter==1.1.8
+    # via mitywgs (setup.py)
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.6.0        # via pyvcf
+# setuptools
