--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-test/*.bam filter=lfs diff=lfs merge=lfs -text
-test/*.bai filter=lfs diff=lfs merge=lfs -text
+*.cram filter=lfs diff=lfs merge=lfs -text
+*.bam filter=lfs diff=lfs merge=lfs -text
+*.bai filter=lfs diff=lfs merge=lfs -text
+*.crai filter=lfs diff=lfs merge=lfs -text
